Update to 0.1.21 Remove python2 package Fix BR's

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
+  pytoml-0.1.21.tar.gz: 41b2a728de66332e7bcce167ba096d9ae2392154
   v0.1.20.tar.gz: b97a8e90829edf770e635193cb3f8c28ae08bef6
